# distributed-key-value-store

./: CMakeLists.txt  README.md
docs/: HASH_RING.md  REPLICATION_ARCHITECTURE.md  SHARD_ROUTER.md
proto/: kvstore.proto
src/: main.cpp
src/client/: client.cpp
src/persistence/: rdb_persistence.cpp
src/replication/: replication_manager.cpp  replication_manager.h
src/server/: server.cpp  server.h
src/service/: kvstore_service.cpp  kvstore_service.h
src/sharding/: hash_ring.cpp  hash_ring.h  shard_info.h  shard_router.cpp  shard_router.h
src/storage/: aof_persistence.cpp  aof_persistence.h  rdb_persistence.h  storage.cpp  storage.h
tests/: README.md  client_test.cpp  read_test.cpp  snapshot_test.cpp  test_all.sh  test_basic_operations.sh  test_concurrent_clients.sh  test_hash_ring.cpp  test_persistence.sh  test_replication.sh  test_shard_router.cpp  test_ttl_expiration.sh  verify_persistence.cpp
